# material_fusion

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  makefile
doc/: development record  document
src/: CFuImage.cpp  CFuImage.h  CFusion.cpp  CFusion.h  CMakeLists.txt  CStitching.cpp  CStitching.h  CUtil.cpp  CUtil.h  CudaCaller.cpp  Makefile  Preprocess.cpp  Preprocess.h  Program.cpp  Program.cu  Program.h  cmake_install.cmake  fusion.cpp  fusion.h  main.cpp  mytest.cpp  preprocess.cpp  preprocess.h  program.cu  program.h
src/SiftGPU/: SiftGPU.h
